// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wire Layout renderLayout() should render a bottom-left (a) to top-right wire (b) 1`] = `
Object {
  "height": 65,
  "minX": -22.5,
  "minY": -7.5,
  "path": "M 30.000 0.000 C 15.000 0.000 -15.000 35.000 0.000 35.000",
  "width": 75,
}
`;

exports[`Wire Layout renderLayout() should render a bottom-left (b) to top-right wire (a) 1`] = `
Object {
  "height": 65,
  "minX": -22.5,
  "minY": -7.5,
  "path": "M 30.000 0.000 C 15.000 0.000 -15.000 35.000 0.000 35.000",
  "width": 75,
}
`;

exports[`Wire Layout renderLayout() should render a top-left (a) to bottom-right wire (b) 1`] = `
Object {
  "height": 65,
  "minX": -17.5,
  "minY": -7.5,
  "path": "M 0.000 35.000 C -10.000 35.000 0.000 0.000 10.000 0.000",
  "width": 50,
}
`;

exports[`Wire Layout renderLayout() should render a top-left (b) to bottom-right wire (a) 1`] = `
Object {
  "height": 65,
  "minX": -17.5,
  "minY": -7.5,
  "path": "M 20.000 35.000 C 10.000 35.000 -10.000 0.000 0.000 0.000",
  "width": 60,
}
`;
